@@ -1,3 +1,9 @@
+Mon Sep  7 12:26:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* lib/irb/inspector.rb (IRB::INSPECTORS.def_inspector): support
+	  object without #inspect defined.  a patch from Daniel
+	  Bovensiepen.  [ruby-core:25200]
+
 Mon Sep  7 05:38:34 2009  Koichi Sasada  <ko1@atdot.net>
 
 	* insns.def (opt_*): add IC operands.
